--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,12 @@ Assignments/*/*.dbf
 Assignments/*/*.shp
 Assignments/*/*.prj
 Assignments/*/*.shx
+Assignments/*/*.png
 Assignments/*/*.tif
 Assignments/*/*.gpkg
 Assignments/*/*.html
 Assignments/*/*.DS_Store
 .Rproj*
+*/*.DS_Store
+*/*/*.DS_Store
+*/*.tex
